# pyPalworldAPI

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt
api/: example.env  mainapi.py
api/models/: auth_models.py  models.py
api/query/: auth.py  palapi.py
api/routers/: admin.py  autocomplete.py  items.py  misc.py  oauth2.py  pals.py  user.py
api/utils/: auth.py  autocustompage.py  customresponses.py  database.py  descriptions.py  examples.py  querydb.py
examples/: README.md  http.md  python.md
mysqldb/: PalAPI.sql
pyPalworldAPI/: __init__.py  mainapi.py
pyPalworldAPI/models/: __init__.py  auth_models.py  models.py
pyPalworldAPI/query/: __init__.py  auth.py  palapi.py
pyPalworldAPI/routers/: __init__.py  admin.py  autocomplete.py  items.py  misc.py  oauth2.py  pals.py  user.py
pyPalworldAPI/utils/: __init__.py  auth.py  autocustompage.py  customexception.py  custompage.py  customresponses.py  database.py  descriptions.py  examples.py
