[project]
name = "pyPalworldAPI"
version = "0.2.0"
description = "A Palworld data API for apps and bots, with pals, items, breeding, and optional OAuth2."
authors = [{ name = "Stolenvw" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql==0.3.2",
    "bcrypt==5.0.0",
    "cryptography==49.0.0",
    "fastapi==0.139.2",
    "fastapi-pagination==0.15.15",
    "mysqlclient==2.2.8",
    "pydantic==2.13.4",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "sqlalchemy==2.0.51",
    "sqlmodel==0.0.39",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "inquirerpy==0.3.4",
    "pillow==12.3.0",
    "aiohttp==3.14.2",
    "httpx2",
    "pytest==9.1.1",
    "trio==0.26.2",
    "sphinx==8.0.2",
    "pydata-sphinx-theme==0.15.4",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["dev", "tests"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "I",
    "T20",
    "LOG",
    "D",
    "W",
    "N",
    "PT",
    "ASYNC",
]
ignore = ["B008", "D413", "D401", "D213", "D203", "D417", "N815", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = false

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["pyPalworldAPI"]
exclude = [
    ".venv",
    "venv",
    ".local-share",
    ".uv-cache",
    "__pycache__",
    ".pytest_cache",
    "**/node_modules",
    "**/.*",
]
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    'ignore:\s*.*You probably want to use `session\.exec\(\)` instead of `session\.execute\(\)`\.:DeprecationWarning',
]
